@@ -21,6 +21,7 @@ import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_DOWNWA
 import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_EXTERNAL_ACTIONS_CONFIG;
 import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_JAVA8_JAVAC_OPTIONS;
 import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_JAVAC;
+import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_JAVACD_CONFIG;
 import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_JAVA_CONFIG;
 import static com.facebook.buck.jvm.java.JavaCompilationConstants.DEFAULT_JAVA_OPTIONS;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -61,6 +62,7 @@ import com.facebook.buck.core.rules.BuildRuleParams;
 import com.facebook.buck.core.rules.TestBuildRuleParams;
 import com.facebook.buck.core.rules.impl.FakeBuildRule;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
+import com.facebook.buck.core.sourcepath.ExplicitBuildTargetSourcePath;
 import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.toolchain.ToolchainProvider;
 import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
@@ -790,12 +792,12 @@ public class AndroidBinaryGraphEnhancerTest {
   @Test
   public void testAllBuildablesExceptPreDexRule() {
     // Create an android_build_config() as a dependency of the android_binary().
-    BuildTarget buildConfigBuildTarget = BuildTargetFactory.newInstance("//java/com/example:cfg");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//java/com/example:cfg");
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
     ActionGraphBuilder graphBuilder = new TestActionGraphBuilder();
     AndroidBuildConfigJavaLibrary buildConfigJavaLibrary =
         AndroidBuildConfigDescription.createBuildRule(
-            buildConfigBuildTarget,
+            buildTarget,
             projectFilesystem,
             "com.example.buck",
             /* values */ BuildConfigFields.of(),
@@ -808,7 +810,10 @@ public class AndroidBinaryGraphEnhancerTest {
             false,
             false,
             new FakeTool(),
-            () -> Paths.get("test/javacd_test.jar"));
+            () -> ExplicitBuildTargetSourcePath.of(buildTarget, Paths.get("test/javacd_test.jar")),
+            ImmutableList.of(),
+            1,
+            1);
 
     BuildTarget apkTarget = BuildTargetFactory.newInstance("//java/com/example:apk");
     BuildRuleParams originalParams =
@@ -1069,6 +1074,7 @@ public class AndroidBinaryGraphEnhancerTest {
         /* noAutoAddOverlayResources */ false,
         /* noResourceRemoval */ false,
         DEFAULT_JAVA_CONFIG,
+        DEFAULT_JAVACD_CONFIG,
         DEFAULT_DOWNWARD_API_CONFIG,
         DEFAULT_EXTERNAL_ACTIONS_CONFIG,
         JavacFactoryHelper.createJavacFactory(DEFAULT_JAVA_CONFIG),
